code cleanup - no new functionality, just addressing analysis issues